@@ -21,6 +21,8 @@ git-annex (7.20190913) UNRELEASED; urgency=medium
     Thanks to Peter Simons for help with analysis of this bug.
   * When dropping an unlocked file, preserve its mtime, which avoids
     git status unncessarily running the clean filter on the file.
+  * uninit: Remove several git hooks that git-annex init sets up.
+  * uninit: Remove the smudge and clean filters that git-annex init sets up.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Sep 2019 11:11:19 -0400
 
